# chip-selection-test

./: .env.example  .gitignore  README.md  config.py  main.py  prompts.json  pyproject.toml  runner.py  test_personas.json
api/: main.py  services.py
api/routes/: generate.py  options.py  ratings.py  results.py  runs.py  stats.py
db/: __init__.py  client.py  repository.py  schema.py  schema.sql
docs/plans/: 2026-01-06-chip-generation-test-design.md  2026-01-07-tui-design.md  2026-01-07-tui-implementation.md  2026-01-14-backend-service-design.md  2026-01-14-backend-service-implementation.md
models/: __init__.py  chip.py
services/: __init__.py  generator.py  llm.py  llm_async.py  runner_async.py  selector.py
tests/: conftest.py  test_app_integration.py  test_chip.py  test_chip_panel.py  test_comparison_screen.py  test_config.py  test_db_repository.py  test_db_schema.py  test_fill.py  test_generate.py  test_generator.py  test_llm_async.py  test_log_pane.py  test_model_selector.py  test_monitor_screen.py  test_options.py  test_rating_bar.py  test_repository.py  test_results.py  test_results_screen.py  test_runner.py  test_runner_async.py  test_selector.py  test_services.py
tui/: app.py
tui/screens/: comparison.py  configure.py  monitor.py  results.py
tui/widgets/: chip_panel.py  log_pane.py  model_selector.py  rating_bar.py
utils/: __init__.py  fill.py  storage.py
