[project]
name = "chip-selection-test"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "python-dotenv>=1.2.1",
    "tqdm>=4.67.1",
    "textual>=0.89.1,<1.0.0",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
